tests/compiler_errors/name_redefinitions/mem_redef_const.tlp
const foo 1 end
reserve foo 1 end
